Fixed <img> not centered

--- a/FoldDesktop/style.css
+++ b/FoldDesktop/style.css
@@ -81,6 +81,8 @@ body {
 }
 
 .fileicon {
+    display: flex;
+    align-items: center;
     align-self: center;
     text-align: center;
     margin-top: 6px;
